# irc

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: client.cpp  client.h  commandProcessor.cpp  commandProcessor.h  connectionManager.cpp  connectionManager.h  ircProtocolHandler.cpp  ircProtocolHandler.h  main.cpp  messageDispatcher.cpp  messageDispatcher.h  session.cpp  session.h  stateManager.cpp  stateManager.h
